--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,25 @@
----
----
+<style>
+a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
 
-@import "{{ site.theme }}";
+a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+}
+</style>
