--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
-<style>
+
 a:link {
     color: green;
     background-color: transparent;
@@ -22,4 +22,18 @@ a:active {
     background-color: transparent;
     text-decoration: underline;
 }
-</style>
+
+.parallax {
+    /* The image used */
+    background-image: url("img_parallax.jpg");
+
+    /* Set a specific height */
+    min-height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
