--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ a:active {
 
 .parallax {
     /* The image used */
-    background-image: url("img_parallax.jpg");
+    background-image: url("./img_parallax.jpg");
 
     /* Set a specific height */
     min-height: 500px; 
